--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* styles.css */
 * {
     margin: 0px;
     padding: 0px;
@@ -96,14 +97,15 @@ li {
     z-index: 2;
     width: 83%;
     border-radius: 5px;
-    /* display: none; */
+    display: none;
 }
 
-.todo-input {
+.todo-input-container {
     display: flex;
     flex-direction: column;
 }
-.confirm-new-task {
+
+#confirm-new-task {
     display: flex;
     margin-top: 10px;
     bottom: 0;
@@ -119,5 +121,39 @@ li {
 }
 
 #new-task-btn, #exit-task-form:hover {
+    cursor: pointer;
+}
+
+
+.dropdown-btn {
+    transform: rotate(180deg);
+    display: flex;
+    width: 100%;
+    margin-top: 5px;
+    justify-content: center;
+    border: none;
+    background: none;
+}
+
+.dropdown-btn:hover {
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    justify-content: space-between;
+}
+
+
+.close-dropdown-btn {
+    display: none;
+    width: 100%;
+    margin-top: 5px;
+    justify-content: center;
+    border: none;
+    background: none;
+}
+
+.close-dropdown-btn:hover {
     cursor: pointer;
 }
